# AutoIndexer

./: AutoIndexer.cpp  AutoIndexer.h  CMakeLists.txt  DSVector.h  README.md  main.cpp  sample_tests.cpp
data/: terms.txt  test_book.txt
